[package]
name = "to-do-list-rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
leptos = { version = "0.5", features = ["ssr", "csr"] }
sled = "0.34"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "KeyboardEvent"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
